[package]
name = "ec"
version = "0.1.0"
edition = "2024"
authors = ["iTitus"]
default-run = "ec"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
aes = "0.8"
cbc = "0.1"
hex = "0.4"
block-padding = "0.3" # keep in sync with crypto deps
itertools = "0.14"

[dev-dependencies]
pretty_assertions = "1"
